auto scroll on message

--- a/public/style/chat.css
+++ b/public/style/chat.css
@@ -27,7 +27,7 @@ body{
  border: 2px solid white;
  background-color: #49495d;
  color: #f7f1e3;
- overflow: scroll;
+ overflow: auto;
  overflow-x: hidden;
 }
 
