--- a/public/style/chat.css
+++ b/public/style/chat.css
@@ -8,8 +8,12 @@ body{
 
 .header{
     background-color: #232343;
-    height: 8vh;
-    padding-top:5vh;
+    height: 13vh;
+    overflow: hidden;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 2vh;
 }
 
 .header h1{
@@ -17,12 +21,42 @@ body{
     margin: 0px;
     color: #ff5252;
     text-shadow: -2px 0 black, 0 2px black, 2px 0 black, 0 -2px black;
+    flex-grow: 6;
+}
+
+.backButton {
+    color: #ff5252;
+    background-color: transparent;
+    border: none;
+    cursor: pointer;
+    font-style: bold;
+    font-size: 20px;
+    flex-grow: 1;
+    text-align: center;
+    text-decoration: none;
+}
+
+.icon{
+    display: inline-block;
+    width: 20px;
+    height: 20px;
+    background-size: cover;
+    margin-left: 10px;
+}
+
+.icon-arrow{
+    background-image: url("../img/back-arrow.svg");
+    margin-bottom: -3px;
+}
+
+.flex-1{
+    flex-grow: 1;
 }
 
 .chatContainer{
  width: 80%;
  margin: 0 auto;
- height: 78vh;
+ height: 74vh;
  box-sizing: border-box;  
  border: 2px solid white;
  background-color: #49495d;
@@ -31,26 +65,36 @@ body{
  overflow-x: hidden;
 }
 
+.chatContainer p {
+    padding: 0 20px;
+}
+
 .chatFooter{
     width: 80%;
     margin: 0 auto;
     height: 9vh;
     box-sizing: border-box;  
     border: 2px solid white;
+    padding: 10px;
+    margin-bottom: 2vh;
+}
+
+.chatFooter form{
+    display: flex;
+    justify-content: space-around;
 }
 
 .chatFooter button{
-    font-size: 30px;
+    font-size: 20px;
     background-color: rgba(255, 82, 82,0.8);
     color: white;
     border:none;
     border-radius: 6px;
     padding: 16px;
-    margin-top: 10px;
-    margin-left: 10px;
-    margin-right: 10px;
     outline:none;
     transition: 1s all;
+    float: right;
+    flex-grow: 1;
 }
 
 .chatFooter button:hover {
@@ -58,20 +102,17 @@ body{
     background-color: rgba(255, 82, 82,1);
 }
 .chatFooter input{
-    width: 88%;
-    height: 60%;
     border: none;
     border: 3px solid rgba(247, 241, 227,.7);
     background: transparent;
     color: #d1ccc0;
     font-size: 22px;
-    margin-left: 5px;
-    margin-right: 20px;
-    margin-top: 1%;
-    margin-bottom: 1%;
-    position: relative;
-    left: 1%;
-    
+    flex-grow: 6;
+    margin-right: 10px;
+}
+
+.chatFooter form{
+    height: 100%;
 }
 
 .chatFooter input:hover, .maininput input:focus, .maininput input:active {
@@ -85,3 +126,4 @@ body{
 .somebody{
        color: #b33939;
 }
+
