--- a/public/style/chat.css
+++ b/public/style/chat.css
@@ -8,7 +8,7 @@ body{
 
 .header{
     background-color: #232343;
-    height: 13vh;
+    min-height: 13vh;
     overflow: hidden;
     display: flex;
     justify-content: center;
@@ -72,7 +72,7 @@ body{
 .chatFooter{
     width: 80%;
     margin: 0 auto;
-    height: 9vh;
+    min-height: 9vh;
     box-sizing: border-box;  
     border: 2px solid white;
     padding: 10px;
@@ -109,6 +109,7 @@ body{
     font-size: 22px;
     flex-grow: 6;
     margin-right: 10px;
+    padding-left: 10px;
 }
 
 .chatFooter form{
@@ -127,3 +128,21 @@ body{
        color: #b33939;
 }
 
+@media (max-width: 576px) {
+    .chatFooter form {
+        flex-direction: column;
+        justify-content: center;
+    }
+    .chatFooter input {
+        margin-right: 0;
+        margin-bottom: 10px;
+    }
+
+    .header{
+        flex-direction: column;
+        height: 18vh;
+    }
+    .backButton{
+        margin: 10px 0;
+    }
+}
