--- a/public/style/style.css
+++ b/public/style/style.css
@@ -39,8 +39,9 @@ section{
     border-bottom: 3px solid rgba(247, 241, 227,.7);
     background: transparent;
     color: #d1ccc0;
-    font-size: 42px;
+    font-size: 28px;
     padding: 4px;
+    width: 100%;
 }
 
 .maininput input:hover, .maininput input:focus, .maininput input:active {
@@ -83,7 +84,7 @@ section{
  background-size: cover;
  width: 400px;
  height: 400px;
- margin: 40px 20px;
+ margin: 40px 0;
  border-radius: 10px;
  cursor: pointer;
  display:flex;
@@ -129,3 +130,19 @@ section{
  .img5{
     background-image:url("../img/garaze.jpg");
  }
+
+ @media (max-width: 576px) {
+    .rooms div.img{
+       width: 100%;
+    }
+    .rooms{
+       width: 100%;
+       padding: 0;
+    }
+    .img-overlay{
+        width: 100%;
+    }
+    body{
+        margin:0;
+    }
+}
